--- a/index.html
+++ b/index.html
@@ -1,136 +1,37 @@
 ---
 layout: general
+highlight_section: home
 ---
 
-<div class="row">
+<div class="row text-center">
   <div class="col-sm-12">
-    <h1> Fedora is made for developers </h1>
+    <h1> Fedora helps you with all steps of development. </h1>
   </div>
-</div>
-<div class="row">
   <div class="col-sm-4">
     <div class="thumbnail">
-      <img style="height:200px" src="/static/homepage/docker.png">
+      <img style="height:200px" src="/static/homepage/tools.png">
       <div class="caption">
-        <h3> Docker </h3>
-        <p> Build, ship, and run any app anywhere with Docker - an open platform for distributed apps for developers and sysadmins </p>
-        <a href="/content/tools/docker/about.html" class="btn btn-default">Learn more</a>
+        <h2> Powerfull Tools </h2>
+        <a href="/tools.html" class="btn btn-default">Learn more</a>
       </div>
     </div>
   </div>
   <div class="col-sm-4">
     <div class="thumbnail">
-      <img style="height:200px" src="/static/homepage/vagrant.png">
+      <img style="height:200px" src="/static/homepage/tech.png">
       <div class="caption">
-        <h3> Vagrant </h3>
-        <p> Create and configure lightweight, reproducible, and portable dev environments with Vagrant. </p>
-        <a href="/content/tools/vagrant/about.html" class="btn btn-default">Learn more</a>
+        <h2> New Technology </h2>
+        <a href="/tech.html" class="btn btn-default">Learn more</a>
       </div>
     </div>
   </div>
   <div class="col-sm-4">
     <div class="thumbnail">
-      <img style="height:200px" src="/static/homepage/devassistant.png">
+      <img style="height:200px" src="/static/homepage/deploy.png">
       <div class="caption">
-        <h3> DevAssistant </h3>
-        <p> DevAssistant can help you set up your developing environment, publish your code, and do many of the chores that somehow... </p>
-        <a href="/content/tools/devassistant/about.html" class="btn btn-default">Learn more</a>
+        <h2> Easy Deployment </h2>
+        <a href="/deployment.html" class="btn btn-default">Learn more</a>
       </div>
     </div>
-  </div>
-</div>
-<div class="row">
-  <div class="col-sm-12">
-    <h2> The latest stable runtimes and frameworks <small> Packaged in Fedora and ready to use! </small></h2>
-  </div>
-  <div class="col-sm-4 col-md-2">
-    <div class="thumbnail">
-      <img style="height:80px" src="/static/homepage/ruby.png">
-      <div class="caption text-center">
-        <h3> Ruby 2.2</h3>
-      </div>
-    </div>
-  </div>
-  <div class="col-sm-4 col-md-2">
-    <div class="thumbnail">
-      <img style="height:80px" src="/static/homepage/ror.png">
-      <div class="caption text-center">
-        <h3> Ruby on Rails 4.2</h3>
-      </div>
-    </div>
-  </div>
-  <div class="col-sm-4 col-md-2">
-    <div class="thumbnail">
-      <img style="height:80px" src="/static/homepage/python.png">
-      <div class="caption text-center">
-        <h3> Python 3.4</h3>
-      </div>
-    </div>
-  </div>
-  <div class="col-sm-4 col-md-2">
-    <div class="thumbnail">
-      <img style="height:80px" src="/static/homepage/django.png">
-      <div class="caption text-center">
-        <h3> Django 1.8 </h3>
-      </div>
-    </div>
-  </div>
-  <div class="col-sm-4 col-md-2">
-    <div class="thumbnail">
-      <img style="height:80px" src="/static/homepage/perl.png">
-      <div class="caption text-center">
-        <h3> Perl 5.20</h3>
-      </div>
-    </div>
-  </div>
-  <div class="col-sm-4 col-md-2">
-    <div class="thumbnail">
-      <img style="height:80px" src="/static/homepage/php.png">
-      <div class="caption text-center">
-        <h3> PHP 5.6</h3>
-      </div>
-    </div>
-  </div>
-</div>
-<div class="row">
-  <div class="col-sm-12">
-    <h2> Enhance your experience with user projects </h2>
-    <div class="panel panel-default">
-      <div class="panel-body">
-        <div class="media">
-          <div class="media-left">
-            <img style="height:80px" src="/static/homepage/copr.png">
-          </div>
-          <div class="media-body">
-            <h3 class="media-heading"> Copr Build Service </h3>
-            <p> Copr is a community build service that helps developers to distribute their projects. Enhance your Fedora experience with additional software. </p>
-            <a href="http://copr.fedoraproject.org/" target="_blank" class="btn btn-primary">Browse projects</a>
-            <a href="/content/deploy_distribute/copr/about.html" class="btn btn-default">Learn more</a>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-<div class="row">
-  <div class="col-sm-12">
-    <h2> Some other things </h2>
-    </div>
-  </div>
-  <div class="col-sm-6">
-    <h3> Quisque ligula magna </h3>
-    <p> Donec ut laoreet sem. Maecenas a ultrices felis. Suspendisse in consequat leo. Quisque ante magna, mattis quis ligula nec, tempus scelerisque eros. Ut consequat malesuada ante, id facilisis justo molestie quis. Sed pretium felis risus.</p>
-  </div>
-  <div class="col-sm-6">
-    <h3> Pellentesque ullamcorper</h3>
-    <p> Sed nec mauris auctor, porta arcu nec, rutrum quam. Sed quis efficitur nibh, vitae venenatis diam. Morbi semper, nulla sit amet malesuada lobortis, magna augue malesuada turpis, quis facilisis eros justo ac nisi. Sed a tellus libero.</p>
-  </div>
-  <div class="col-sm-6">
-    <h3> Praesent est dolor</h3>
-    <p> Suspendisse dolor sem, bibendum vitae dolor et, vehicula ultrices tortor. Duis consequat malesuada scelerisque. Proin sed tellus ex. Duis rutrum euismod elit nec vulputate. Nunc congue rhoncus nisl. Phasellus vitae tempor turpis. </p>
-  </div>
-  <div class="col-sm-6">
-    <h3> Vivamus sit amet</h3>
-    <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec dui sem, tincidunt sed tellus at, blandit scelerisque massa. Pellentesque vel tellus at tellus malesuada hendrerit ut sed dolor. Curabitur at sagittis eros. Donec sed convallis justo. Aenean eu dolor mi.</p>
   </div>
 </div>
