page_logo filter

--- a/deployment.html
+++ b/deployment.html
@@ -4,7 +4,7 @@ highlight_section: deployment
 ---
 <div class="row">
   <div class="col-sm-12">
-    <h1> Deployment Overviev </h1>
+    <h1> Deployment Options </h1>
   </div>
   {% for p in site.pages %}
   {% if p.section == "deployment" %}
@@ -14,7 +14,7 @@ highlight_section: deployment
         <div class="panel-body">
           <div class="media">
             <div class="media-left">
-                <img style="height:100px" src="">
+              <img style="height:100px" src="{{ p.url | page_logo }}">
             </div>
             <div class="media-body">
               <h2>{{ p.title }}</h2>
