--- a/tools.html
+++ b/tools.html
@@ -14,7 +14,7 @@ highlight_section: tools
         <div class="panel-body">
           <div class="media">
             <div class="media-left">
-                <img style="height:100px" src="">
+              <img style="height:100px" src="{{ p.url | page_logo }}">
             </div>
             <div class="media-body">
               <h2>{{ p.title }}</h2>
