fix typo on the homepage

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ highlight_section: home
     <div class="thumbnail">
       <img style="height:200px" src="/static/homepage/tools.png">
       <div class="caption">
-        <h2> Powerfull Tools </h2>
+        <h2> Powerful Tools </h2>
         <a href="/tools.html" class="btn btn-default">Learn more</a>
       </div>
     </div>
