Slight wording/style change

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ highlight_section: home
 
 <div class="row text-center">
   <div class="col-sm-12">
-    <h1> Fedora helps you with all steps of development. </h1>
+    <h1> Fedora helps you with every step of development. </h1>
   </div>
   <div class="col-sm-4">
     <div class="thumbnail">
