--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ highlight_section: home
     <div class="thumbnail">
       <img style="height:200px" src="/static/homepage/deploy.png">
       <div class="caption">
-        <h2> Easy Deployment </h2>
+        <h2> Fast Deployment </h2>
         <a href="/deployment.html" class="btn btn-default">Learn more</a>
       </div>
     </div>
