--- a/index.html
+++ b/index.html
@@ -5,7 +5,18 @@ highlight_section: home
 
 <div class="row text-center">
   <div class="col-sm-12">
+    <h1> Start your project with ease.</h1>
+    <p> Get the insights and recommendations on how to start a new project and how to collaborate effectively. </p>
+    <a href="/start.html" class="btn btn-default">Browse the Options</a>
+  </div>
+</div>
+
+</div><hr><div class="container">
+
+<div class="row text-center">
+  <div class="col-sm-12">
     <h1> Fedora helps you with every step of development. </h1>
+    <p> Search trough the guides. Fedora offers a rich set of tools and technology to make your project successful. Share your app, deploy your service, collaborate with others.</p>
   </div>
   <div class="col-sm-4">
     <div class="thumbnail">
