--- a/tech.html
+++ b/tech.html
@@ -21,7 +21,7 @@ highlight_section: tech
         <div class="panel-body">
           <div class="media">
             <div class="media-left">
-              <img style="height:100px" src="{{ p.url | page_logo }}">
+              <img style="height:100px" src="{{ p.page | page_logo }}">
             </div>
             <div class="media-body">
               <h2>{{ p.title }}</h2>
