--- a/index.html
+++ b/index.html
@@ -5,11 +5,28 @@ highlight_section: home
 
 <div class="row text-center">
   <div class="col-sm-12">
-    <h1> Start your project with ease.</h1>
-    <p> Get the insights and recommendations on how to start a new project and how to collaborate effectively. </p>
-    <a href="/start.html" class="btn btn-default">Browse the Options</a>
+    <h2>Let's get building.</h2>
+</div>
+
+<div class="row text-center" id="front-nav">
+  <div class="col-sm-3">
+	<img src="/static/img/nav-start.png">
+    <h3><a href="/start.html">Start a Project</a></h3>
+  </div>
+  <div class="col-sm-3">
+	<img src="/static/img/nav-tools.png">
+    <h3><a href="/tools.html">Get Tools</a></h3>
+  </div>
+  <div class="col-sm-3">
+	<img src="/static/img/nav-tech.png">
+    <h3><a href="/tech.html">Technology Overview</a></h3>
+  </div>
+  <div class="col-sm-3">
+	<img src="/static/img/nav-deploy.png">
+    <h3><a href="/deployment.html">Deploy Your Project</a></h3>
   </div>
 </div>
+
 
 </div><hr><div class="container">
 
