refining in-page nav area + adding front page banners area

--- a/index.html
+++ b/index.html
@@ -12,67 +12,24 @@ highlight_section: home
   <div class="col-sm-3">
 	<img src="/static/img/nav-start.png">
     <h3><a href="/start.html">Start a Project</a></h3>
+    <p>Guides for creating software and hardware projects as well as information on project collaboration.</p>
   </div>
   <div class="col-sm-3">
 	<img src="/static/img/nav-tools.png">
     <h3><a href="/tools.html">Get Tools</a></h3>
+    <p>An overview of development tools available in Fedora including Docker.</p>
   </div>
   <div class="col-sm-3">
 	<img src="/static/img/nav-tech.png">
     <h3><a href="/tech.html">Technology Overview</a></h3>
+    <p>Details on development resources such as languages and databases available in Fedora.</p>
   </div>
   <div class="col-sm-3">
 	<img src="/static/img/nav-deploy.png">
     <h3><a href="/deployment.html">Deploy Your Project</a></h3>
+    <p>Once your project is ready, an overview of deployment options for sharing it.</p>
   </div>
 </div>
 
 
-</div><hr><div class="container">
-
-<div class="row text-center">
-  <div class="col-sm-12">
-    <h1> Fedora helps you with every step of development. </h1>
-    <p> Search trough the guides. Fedora offers a rich set of tools and technology to make your project successful. Share your app, deploy your service, collaborate with others.</p>
-  </div>
-  <div class="col-sm-4">
-    <div class="thumbnail">
-      <img style="height:200px" src="/static/homepage/tools.png">
-      <div class="caption">
-        <h2> Powerful Tools </h2>
-        <a href="/tools.html" class="btn btn-default">Learn more</a>
-      </div>
-    </div>
-  </div>
-  <div class="col-sm-4">
-    <div class="thumbnail">
-      <img style="height:200px" src="/static/homepage/tech.png">
-      <div class="caption">
-        <h2> New Technology </h2>
-        <a href="/tech.html" class="btn btn-default">Learn more</a>
-      </div>
-    </div>
-  </div>
-  <div class="col-sm-4">
-    <div class="thumbnail">
-      <img style="height:200px" src="/static/homepage/deploy.png">
-      <div class="caption">
-        <h2> Fast Deployment </h2>
-        <a href="/deployment.html" class="btn btn-default">Learn more</a>
-      </div>
-    </div>
-  </div>
-  <div class="row">
-      {% for p in site.pages %}
-	      {% if p.section == "tech-languages" %}
-	      <div class="media-left">
-	          <img style="height:80px" src="{{ p.page | page_logo }}">
-	      </div>
-	      <div class="media-body">
-	          <h3>{{ p.title }}</h3>
-	          <h3>{{ p.version }}</h3>
-	      </div>
-	      {% endif %}
-      {% endfor %}
-  </div>
 </div>
