Replace Lorem Ipsum with description from pages

--- a/start.html
+++ b/start.html
@@ -22,7 +22,7 @@ highlight_section: start
             </div>
             <div class="media-body">
               <h2>{{ p.title }}</h2>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec dui sem, tincidunt sed tellus at, blandit.</p>
+              <p>{{ p.description }}</p>
             </div>
           </div>
         </div>
@@ -46,7 +46,7 @@ highlight_section: start
             </div>
             <div class="media-body">
               <h2>{{ p.title }}</h2>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec dui sem, tincidunt sed tellus at, blandit.</p>
+              <p>{{ p.description }}</p>
             </div>
           </div>
         </div>
@@ -70,7 +70,7 @@ highlight_section: start
             </div>
             <div class="media-body">
               <h2>{{ p.title }}</h2>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec dui sem, tincidunt sed tellus at, blandit.</p>
+              <p>{{ p.description }}</p>
             </div>
           </div>
         </div>
