--- a/tech-database.html
+++ b/tech-database.html
@@ -25,7 +25,7 @@ highlight_section: tech
             </div>
             <div class="media-body">
               <h2>{{ p.title }}</h2>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec dui sem, tincidunt sed tellus at, blandit.</p>
+              <p>{{ p.description }}</p>
             </div>
           </div>
         </div>
