--- a/tools.html
+++ b/tools.html
@@ -18,7 +18,7 @@ highlight_section: tools
             </div>
             <div class="media-body">
               <h2>{{ p.title }}</h2>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec dui sem, tincidunt sed tellus at, blandit.</p>
+              <p>{{ p.description }}</p>
             </div>
           </div>
         </div>
