actually functioning dynamic page title / image generation in templates :)

--- a/start.html
+++ b/start.html
@@ -1,6 +1,13 @@
 ---
 layout: general
 highlight_section: start
+title: Start a Project
+description: Guides for creating software and hardware projects as well as information on project collaboration.
+layout: general
+section: start
+category-name: start
+attribution: Tools of the Trade by Cat Burston on Flickr, CC-BY-2.0
+photo-link: https://www.flickr.com/photos/catt1788/6335937959/
 ---
 <div class="row">
   <div class="col-sm-12">
