--- a/tech.html
+++ b/tech.html
@@ -1,6 +1,13 @@
 ---
 layout: general
 highlight_section: tech
+title: Technology Overview
+description: Details on development resources such as languages and databases available in Fedora.
+layout: general
+section: tech
+category-name: tech
+attribution: Abstract Technology architecture parabolic Windows by Wonderlane on Flickr, CC-BY-2.0
+photo-link: https://www.flickr.com/photos/wonderlane/2315590279/
 ---
 <div class="row">
   <div class="col-sm-12">
