--- a/tools.html
+++ b/tools.html
@@ -1,6 +1,13 @@
 ---
 layout: general
 highlight_section: tools
+title: Get Tools
+description: An overview of development tools available in Fedora, including Docker.
+layout: general
+section: tools
+category-name: tools
+attribution: Bike Tools in Black and White by Jereme Rauckman on Flickr, CC-BY-2.0
+photo-link: https://www.flickr.com/photos/rauckhaus/8638556209/
 ---
 <div class="row">
   <div class="col-sm-12">
