adding dynamic title / heade rimage for tech overview and deployment tabs

--- a/deployment.html
+++ b/deployment.html
@@ -1,11 +1,15 @@
 ---
 layout: general
 highlight_section: deployment
+title: Deploy Your Project
+description: Once your project is ready, an overview of deployment options for sharing it.
+layout: general
+section: deploy
+category-name: deploy
+attribution: Minotaur Rocket Launch at NASA Wallops by NASA Goddard Space Flight Center on Flickr, CC-BY-2.0
+photo-link: https://www.flickr.com/photos/gsfc/5890869490/
 ---
 <div class="row">
-  <div class="col-sm-12">
-    <h1> Deployment Options </h1>
-  </div>
   {% for p in site.pages %}
   {% if p.section == "deployment" %}
   <div class="col-sm-6">
