refinement of technology overview top page

--- a/tech.html
+++ b/tech.html
@@ -11,10 +11,6 @@ photo-link: https://www.flickr.com/photos/wonderlane/2315590279/
 ---
 <div class="row">
   <div class="col-sm-12">
-    <ul class="nav nav-tabs nav-tabs-pf">
-      <li class="active"><a href="/tech.html">Languages</a></li>
-      <li><a href="/tech-database.html">Database</a></li>
-    </ul>
     <h2> Languages </h2>
   </div>
 </div>
@@ -22,7 +18,7 @@ photo-link: https://www.flickr.com/photos/wonderlane/2315590279/
   {% for p in site.pages %}
   {% if p.section == "tech-languages" %}
   <div class="col-sm-6">
-    <a href="{{ p.url }}">
+    <a class="panel-link" href="{{ p.url }}">
       <div class="panel panel-default">
         <div class="panel-body">
           <div class="media">
@@ -30,7 +26,33 @@ photo-link: https://www.flickr.com/photos/wonderlane/2315590279/
               <img style="height:100px" src="{{ p.page | page_logo }}">
             </div>
             <div class="media-body">
-              <h2>{{ p.title }}</h2>
+              <h3>{{ p.title }}</h3>
+              <p>{{ p.description }}</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </a>
+  </div>
+  {% endif %}
+  {% endfor %}
+</div>
+<div class="col-sm-12">
+    <h2> Databases </h2>
+</div>
+<div class="row">
+  {% for p in site.pages %}
+  {% if p.section == "tech-database" %}
+  <div class="col-sm-6">
+    <a href="{{ p.url }}">
+      <div class="panel panel-default">
+        <div class="panel-body">
+          <div class="media">
+            <div class="media-left">
+              <img style="width:80px" src="{{ p.page | page_logo }}">
+            </div>
+            <div class="media-body">
+              <h3>{{ p.title }}</h3>
               <p>{{ p.description }}</p>
             </div>
           </div>
