cleaning up the deployment page

--- a/deployment.html
+++ b/deployment.html
@@ -18,7 +18,7 @@ photo-link: https://www.flickr.com/photos/gsfc/5890869490/
         <div class="panel-body">
           <div class="media">
             <div class="media-left">
-              <img style="height:100px" src="{{ p.page | page_logo }}">
+              <img style="width:100px" src="{{ p.page | page_logo }}">
             </div>
             <div class="media-body">
               <h2>{{ p.title }}</h2>
