--- a/deployment.html
+++ b/deployment.html
@@ -13,7 +13,7 @@ photo-link: https://www.flickr.com/photos/gsfc/5890869490/
   {% for p in site.pages %}
   {% if p.section == "deployment" %}
   <div class="col-sm-6">
-    <a href="{{ p.url }}">
+    <a class="panel-link" href="{{ p.url }}">
       <div class="panel panel-default">
         <div class="panel-body">
           <div class="media">
