text update + dev banner

--- a/index.html
+++ b/index.html
@@ -4,30 +4,26 @@ highlight_section: home
 ---
 
 <div class="row text-center">
-  <div class="col-sm-12">
-    <h2>Let's get building.</h2>
-</div>
-
 <div class="row text-center" id="front-nav">
   <div class="col-sm-3">
 	<img src="/static/img/nav-start.png">
     <h3><a href="/start.html">Start a Project</a></h3>
-    <p>Guides for creating software and hardware projects as well as information on project collaboration.</p>
+    <p>How to do web, mobile, Arduino, and RaspberryPi development on Fedora.</p>
   </div>
   <div class="col-sm-3">
 	<img src="/static/img/nav-tools.png">
     <h3><a href="/tools.html">Get Tools</a></h3>
-    <p>An overview of development tools available in Fedora including Docker.</p>
+    <p>Prepare your environment with DevAssistant. Collaborate with Docker and Vagrant.</p>
   </div>
   <div class="col-sm-3">
 	<img src="/static/img/nav-tech.png">
     <h3><a href="/tech.html">Technology Overview</a></h3>
-    <p>Details on development resources such as languages and databases available in Fedora.</p>
+    <p>Languages and their modules available in Fedora. Installing databases and their configuration.</p>
   </div>
   <div class="col-sm-3">
 	<img src="/static/img/nav-deploy.png">
-    <h3><a href="/deployment.html">Deploy Your Project</a></h3>
-    <p>Once your project is ready, an overview of deployment options for sharing it.</p>
+    <h3><a href="/deployment.html">Deploy and Distribute</a></h3>
+    <p>Package as an RPM. Distribute with Copr. Deploy to OpenShift.</p>
   </div>
 </div>
 
