--- a/start.html
+++ b/start.html
@@ -21,7 +21,7 @@ photo-link: https://www.flickr.com/photos/catt1788/6335937959/
         <div class="panel-body">
           <div class="media">
             <div class="media-left">
-              <img src="{{ p.page_logo }}">
+              <img style="height:100px" src="{{ p.page | page_logo }}">
             </div>
             <div class="media-body">
               <h3>{{ p.title }}</h3>
@@ -45,7 +45,7 @@ photo-link: https://www.flickr.com/photos/catt1788/6335937959/
         <div class="panel-body">
           <div class="media">
             <div class="media-left">
-              <img src="{{ p.page_logo }}">
+              <img style="height:100px" src="{{ p.page | page_logo }}">
             </div>
             <div class="media-body">
               <h3>{{ p.title }}</h3>
@@ -69,7 +69,7 @@ photo-link: https://www.flickr.com/photos/catt1788/6335937959/
         <div class="panel-body">
           <div class="media">
             <div class="media-left">
-              <img src="{{ p.page_logo }}">
+              <img style="height:100px" src="{{ p.page | page_logo }}">
             </div>
             <div class="media-body">
               <h3>{{ p.title }}</h3>
