Include the right attribution on the search page

--- a/search.html
+++ b/search.html
@@ -2,6 +2,8 @@
 layout: search
 title: Search Fedora Developer Portal
 description: Search Fedora Developer Portal
+attribution: Union Station Abstract by DualD FlipFlop on Flickr, CC-BY-2.0
+photo-link: https://www.flickr.com/photos/duald/7423940266/
 ---
 
 <h2>Search results</h2>
