Fix: search-results should not be within <form>

--- a/search.html
+++ b/search.html
@@ -9,7 +9,7 @@ photo-link: https://www.flickr.com/photos/duald/7423940266/
 <h2>Search results</h2>
 
 <section id="search-results">
-  <div class="entries" style="font-size: 15px; display: block; position: static; padding: 0; margin: 0; border: 0;">
+  <div class="entries" style="font-size: 15px; display: block; position: static; padding: 0; margin: 0; border: 0; width: 100%;">
   </div>
 </section>
 
