Use lower-case letters in main navigation

--- a/start.html
+++ b/start.html
@@ -1,7 +1,7 @@
 ---
 layout: general
 highlight_section: start
-title: Start a Project
+title: Start a project
 description: Guides for creating software and hardware projects as well as information on project collaboration.
 layout: general
 section: start
@@ -83,4 +83,3 @@ photo-link: https://www.flickr.com/photos/catt1788/6335937959/
   {% endif %}
   {% endfor %}
 </div>
-
