--- a/tech.html
+++ b/tech.html
@@ -1,7 +1,7 @@
 ---
 layout: general
 highlight_section: tech
-title: Technology Overview
+title: Technology overview
 description: Details on development resources such as languages and databases available in Fedora.
 layout: general
 section: tech
