--- a/tools.html
+++ b/tools.html
@@ -1,7 +1,7 @@
 ---
 layout: general
 highlight_section: tools
-title: Get Tools
+title: Get tools
 description: An overview of development tools available in Fedora, including Docker.
 layout: general
 category-name: tools
@@ -34,4 +34,3 @@ photo-link: https://www.flickr.com/photos/rauckhaus/8638556209/
   {% endif %}
   {% endfor %}
 </div>
-
