--- a/index.html
+++ b/index.html
@@ -7,22 +7,22 @@ highlight_section: home
 <div class="row text-center" id="front-nav">
   <div class="col-sm-3">
 	<a href="/start.html"><img src="/static/img/nav-start.png"></a>
-    <h3><a href="/start.html">Start a Project</a></h3>
+    <h3><a href="/start.html">Start a project</a></h3>
     <p>How to do web, mobile, Arduino, and RaspberryPi development on Fedora.</p>
   </div>
   <div class="col-sm-3">
 	<a href="/tools.html"><img src="/static/img/nav-tools.png"></a>
-    <h3><a href="/tools.html">Get Tools</a></h3>
+    <h3><a href="/tools.html">Get tools</a></h3>
     <p>Prepare your environment with DevAssistant. Collaborate with Docker and Vagrant.</p>
   </div>
   <div class="col-sm-3">
 	<a href="/tech.html"><img src="/static/img/nav-tech.png"></a>
-    <h3><a href="/tech.html">Technology Overview</a></h3>
+    <h3><a href="/tech.html">Technology overview</a></h3>
     <p>Languages and their modules available in Fedora. Installing databases and their configuration.</p>
   </div>
   <div class="col-sm-3">
 	<a href="/deployment.html"><img src="/static/img/nav-deploy.png"></a>
-    <h3><a href="/deployment.html">Deploy and Distribute</a></h3>
+    <h3><a href="/deployment.html">Deploy and distribute</a></h3>
     <p>Package as an RPM. Distribute with Copr. Deploy to OpenShift.</p>
   </div>
 </div>
