Update main sections descriptions

--- a/start.html
+++ b/start.html
@@ -2,7 +2,7 @@
 layout: general
 highlight_section: start
 title: Start a project
-description: Guides for creating software and hardware projects as well as information on project collaboration.
+description: How to do web, mobile, Arduino, and RaspberryPi development on Fedora.
 layout: general
 section: start
 category-name: start
