--- a/tech.html
+++ b/tech.html
@@ -2,7 +2,7 @@
 layout: general
 highlight_section: tech
 title: Technology overview
-description: Details on development resources such as languages and databases available in Fedora.
+description: Languages and their modules available in Fedora. Installing databases and their configuration.
 layout: general
 section: tech
 category-name: tech
