--- a/deployment.html
+++ b/deployment.html
@@ -1,8 +1,8 @@
 ---
 layout: general
 highlight_section: deployment
-title: Deploy Your Project
-description: Once your project is ready, an overview of deployment options for sharing it.
+title: Deploy and distribute
+description: Package as an RPM. Distribute with Copr. Deploy to OpenShift.
 layout: general
 section: deploy
 category-name: deploy
@@ -32,4 +32,3 @@ photo-link: https://www.flickr.com/photos/gsfc/5890869490/
   {% endif %}
   {% endfor %}
 </div>
-
