--- a/tools.html
+++ b/tools.html
@@ -2,7 +2,7 @@
 layout: general
 highlight_section: tools
 title: Get tools
-description: An overview of development tools available in Fedora, including Docker.
+description: Prepare your environment with DevAssistant. Collaborate with Docker and Vagrant.
 layout: general
 category-name: tools
 attribution: Bike Tools in Black and White by Jereme Rauckman on Flickr, CC-BY-2.0
