Rename the section to Languages & databases

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ highlight_section: home
   </div>
   <div class="col-sm-3">
 	<a href="/tech.html"><img src="/static/img/nav-tech.png"></a>
-    <h3><a href="/tech.html">Languages & Databases</a></h3>
+    <h3><a href="/tech.html">Languages & databases</a></h3>
     <p>Languages and their modules available in Fedora. Installing databases and their configuration.</p>
   </div>
   <div class="col-sm-3">
