--- a/tech.html
+++ b/tech.html
@@ -1,7 +1,7 @@
 ---
 layout: general
 highlight_section: tech
-title: Technology overview
+title: Languages &amp; databases
 description: Languages and their modules available in Fedora. Installing databases and their configuration.
 layout: general
 section: tech
