Add virt-builder tool logo and related style changes

--- a/tools.html
+++ b/tools.html
@@ -2,7 +2,7 @@
 layout: general
 highlight_section: tools
 title: Get tools
-description: Prepare your environment with DevAssistant. Collaborate with Docker and Vagrant.
+description: Prepare your environment with DevAssistant. Collaborate with Docker, Vagrant and Virt-builder.
 layout: general
 category-name: tools
 attribution: Bike Tools in Black and White by Jereme Rauckman on Flickr, CC-BY-2.0
