--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ highlight_section: home
   <div class="col-sm-3">
 	<a href="/tools.html"><img src="/static/img/nav-tools.png"></a>
     <h3><a href="/tools.html">Get tools</a></h3>
-    <p>Prepare your environment with DevAssistant. Collaborate with Docker and Vagrant.</p>
+    <p>Prepare your environment with DevAssistant. Collaborate with Docker and Vagrant. Handle and debug crashes with ABRT.</p>
   </div>
   <div class="col-sm-3">
 	<a href="/tech.html"><img src="/static/img/nav-tech.png"></a>
